# glimplify

./: CMakeLists.txt  README.md
include/: camera.hpp  context.hpp  program.hpp  size_of.hpp  texture.hpp  vertices.hpp
src/: main.cpp
